--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,9 @@
           ["@layouts", "./src/renderer/app/layouts"],
           ["@components", "./src/renderer/app/components"],
           ["@router", "./src/renderer/app/router"],
+          ["@hooks", "./src/renderer/app/hooks"],
+          ["@store", "./src/renderer/app/store"],
+          ["@context", "./src/renderer/app/context"],
           ["@icons", "./src/renderer/app/icons"],
           ["@common", "./src/common"],
           ["@main", "./src/main"],
