--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
+    "mobx": "^6.10.0",
+    "mobx-react-lite": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
